--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>data</module>
         <module>cache</module>
         <module>util</module>
+        <module>queue</module>
     </modules>
 
     <properties>
