--- a/core/pom.xml
+++ b/core/pom.xml
@@ -342,6 +342,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <artifactId>commons-codec</artifactId>
+            <groupId>commons-codec</groupId>
+            <version>1.9</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
