--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.hearglobal.msp</groupId>
     <artifactId>core</artifactId>
-    <version>0.0.7-SNAPSHOT</version>
+    <version>0.0.8-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
@@ -347,6 +347,12 @@
             <artifactId>commons-codec</artifactId>
             <groupId>commons-codec</groupId>
             <version>1.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.hearglobal</groupId>
+            <artifactId>hg-security</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
